# WaveRecorder

./: .gitignore  CMakeLists.txt
include/: WaveGen.h
include/geometry/: pose.hpp
include/utils/: QtTcpSender.hpp  SimpleLog.hpp  TimeHelpers.hpp
lib/: WaveGen.cpp
log/: 1.txt  2.txt  3.txt
log/old/: 2.txt  3.txt
log/slow/: 2_waveLog_0.4_1.3.txt
src/: main.cpp  reader.cpp  tcp.cpp
